tests/baselines/reference/parserErrorRecovery_VariableList1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserErrorRecovery_VariableList1.ts(2,1): error TS1108: A 'return' statement can only be used within a function body.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserErrorRecovery_VariableList1.ts (1 errors) ====
    var a,
    return;
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.